[package]
name = "dbsession"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "^2.0.0", features = ["session"], default-features = true }
serde = { version = "^1.0.196", features = ["derive"] }
# # here it's ok to use the entities, this crate only uses the session
chrono = { version = "^0.4.34", features = ["clock"] }
serde_json = "^1.0.113"
sea-orm ={ version = "^0.12.14", features = [
    # "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "with-chrono",
    "with-uuid",
    "with-json",
]}
