[package]
name = "dbsession"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "^2.0.0", features = ["session"], default-features = true }
serde = { version = "^1.0.196", features = ["derive"] }
chrono = { version = "^0.4.34", features = ["clock"] }
serde_json = "^1.0.113"
sea-orm ={ version = "^0.12.14", features = [
    "chrono",
    "with-chrono",
    "with-json",
]}
sea-orm-migration = { version = "^0.12.15", optional = true}

[features]
default = []
migration = ["dep:sea-orm-migration"]
