[package]
name = "dxp-db-session"
version = "1.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "^3.0.1", features = ["session"], default-features = false, optional = true }
serde = { version = "^1.0.203", features = ["derive"], optional = true }
chrono = { version = "^0.4.38", features = ["clock"], optional = true }
serde_json = { version = "^1.0.68", optional = true }
sea-orm ={ version = "^1.0.1", default-features = false, features = [
    "macros",
    "with-chrono",
    "with-json",
], optional = true }
sea-orm-migration = { version = "^1.0.1", optional = true}

[features]
default = ["dbsession"]
dbsession = ["dep:poem", "dep:serde", "dep:chrono", "dep:serde_json", "dep:sea-orm"]
migration = ["dep:sea-orm-migration"]
